[package]
name = "ssdp"
version = "0.7.0"
edition = "2021"

license = "MIT/Apache-2.0"
description = "An asynchronous abstraction for discovering devices and services on a network."
authors = ["GGist <amiller4421@gmail.com>", "Ignacio Corderi <icorderi@msn.com>", "A. Molzer <andreas.molzer@gmx.de>"]

documentation = "https://docs.rs/ssdp"
homepage = "https://github.com/HeroicKatora/ssdp"
repository = "https://github.com/HeroicKatora/ssdp"
keywords = ["upnp", "ssdp", "simple", "service", "discovery"]
readme = "README.md"

[dependencies]
log = "0.4"
headers = "0.4"
httparse = "1.10"
net2 = "0.2.23"
netdev = "0.32.0"
quick-error = "2"

[features]
